Fix layout issues in mobile browser

--- a/src/app/app-frame/app-frame.component.scss
+++ b/src/app/app-frame/app-frame.component.scss
@@ -103,11 +103,9 @@
 
 	.app-content-wrapper {
 		flex: 1;
-		height: 100vh;
 		overflow: auto;
 
 		@media (max-width: 599px) {
-			height: calc(100vh - 80px);
 			flex: unset;
 		}
 	}
